<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activitys.FormProductActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_registar_new_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_registar_new_user_email_imput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:hint="@string/activity_registar_new_user_email"
            android:inputType="textEmailAddress"

            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_registar_new_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/activity_registar_new_user_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_registar_new_user_name_imput"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:hint="@string/activity_registar_new_user_name"
                android:inputType="textEmailAddress"

                />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_registar_new_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/activity_registar_new_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_registar_new_user_password_imput"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:inputType="textPassword"

                android:hint="@string/activity_registar_new_user_password"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_registar_new_user_register_buttom"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="50dp"

            android:text="@string/activity_registar_new_user_register_buttom"

            android:elevation="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_registar_new_user_password"
            app:layout_constraintVertical_bias="0.027" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>