<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activitys.FormProductActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_login_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/content_login_user_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/content_login_user_email_imput"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:hint="@string/content_login_user_hint_email"
                android:inputType="textEmailAddress"

                />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_login_user_email_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/content_login_user_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/content_login_user_email_password_imput"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:inputType="textPassword"

                android:hint="@string/content_login_user_hint_password"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/content_login_user_email_acess_buttom"

            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="50dp"

            android:text="@string/content_login_user_login_buttom"

            android:elevation="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_login_user_email_password"
            app:layout_constraintVertical_bias="0.027" />

        <Button
            android:id="@+id/content_login_user_email_newuser_buttom"

            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="50dp"

            android:text="@string/content_login_user_newuser_buttom"
            android:elevation="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_login_user_email_acess_buttom"
            app:layout_constraintVertical_bias="0.027"
            />

        <ImageView
            android:id="@+id/content_login_user_img"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.215"

            app:layout_constraintWidth_percent="1"

            app:srcCompat="@drawable/img_login_acess" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>